--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,12 @@
   }
 }
 
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,4 +30,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+h1 {
+  text-align: center;
 }
